@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: data_xfer32.cc,v 1.40 2006/11/26 12:53:01 sshwarts Exp $
+// $Id: data_xfer32.cc,v 1.41 2007/01/26 22:12:05 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2001  MandrakeSoft S.A.
@@ -241,6 +241,7 @@ void BX_CPU_C::CMOV_GdEd(bxInstruction_c *i)
   if (condition) {
     BX_WRITE_32BIT_REGZ(i->nnn(), op2_32);
   }
+  BX_CLEAR_64BIT_HIGH(i->nnn()); // always clear upper part of the register
 #else
   BX_INFO(("CMOV_GdEd: -enable-cpu-level=6 required"));
   UndefinedOpcode(i);
