@@ -4,6 +4,9 @@ Changes after 2.3 release:
   - Fixed critical issue with 0x90 opcode (NOP) handling in x86-64 mode
   - Correctly detect inexact result by FPU
   - Do not save and restore XMM8-XMM15 registers when not in x86-64 mode
+  - Fixed zero upper 32-bit part of GPR in x86-64 mode
+  - CMOV_GdEd should zero upper 32-bit part of GPR register even if the
+    'cmov' condition was false !
   - Several disasm and internal debugger fixes (again)
 
 - General
